--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>El blog de Otravalentina</title>
 </head>
 <body>
-
   <h1>
     Curso esencial de html y css
   </h1>
@@ -14,9 +13,44 @@
     Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
     en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
   </p>
+  <h2>
+    Setup
+  </h2>
   <img src="images/google-chrome.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
+  <h3>
+    Google Chrome
+  </h3>
+  <p>
+    Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
+    desarrollo avanzadas y de amigable uso.
+  </p>
   <img src="images/visual-studio-code.png" alt="Logo de Visual Estudio Code" title="Logo de Visual Estudio Code">
+   <h3>
+     Visual Studio Code
+   </h3>
+    <p>
+    Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de
+    extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
+    el que se desemvuelva.
+    </p>
   <img src="images/figma.png" alt="Logo de Figma" title="Logo de Figma">
+   <h3>
+    Figma
+   </h3>
+    <p>
+   Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
+   implementación por su fácil uso porque puede ser usado directamente desde el navegador.
+    </p>
   <img src="images/github.png" alt="Logo de GitHub" title="Logo de GitHub">
+   <h3>
+     GitHub
+   </h3>
+    <p>
+   Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el
+   mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de
+   manera privada, Github será esencial para almacenar tu futuro portafolio.
+    </p>
+   <hr>
+   <h2>Conceptos esenciales del Desarrollo Web</h2>
 </body>
 </html>
