--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
   <title>El blog de Otravalentina</title>
 </head>
 <body>
+  <header>
+    <p>
+      Setup
+    </p>
+    <nav>
+      <ol>
+        <li>Google Chrome</li>
+        <li>Visual Studio Code</li>
+        <li>Figma</li>
+        <li>GitHuB</li>
+      </ol>
+      <p>
+        Conceptos esenciales del Desarrollo Web
+      </p>
+      <ol>
+        <li>Que es HTML</li>
+        <li>Etiquetas</li>
+        <li>DOM</li>
+        <li>Semántica</li>
+        <li>Atributos</li>
+        <li>Que es CSS</li>
+      </ol>
+    </nav>
+  </header>
   <h1>
     Curso esencial de html y css
   </h1>
@@ -52,5 +76,66 @@
     </p>
    <hr>
    <h2>Conceptos esenciales del Desarrollo Web</h2>
-</body>
+   <h3>Qué es HTML</h3>
+   <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado
+    y la estructura del contenido.</p>
+   <h3>Etiquetas </h3>
+   <p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene
+    características y usos diferentes aunque visualmente den un resultado similar.</p>
+    <p> Muchas etiquetas son fácil de diferencias como los headings o las imágenes y otras diferentes como header, footer,
+    section o div, aquí es donde la semántica será la respuesta y si sabemos un poco de inglés también podremos darnos una
+    pequeña idea de su uso pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como
+    Software Developer.</p>
+    <h3>DOM</h3>
+    <p>El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol
+    genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar
+    dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
+    <img src="images/DOM.png" alt="Estructura de arbol que representa al Document Object Model" title="Estructura de arbol que representa al Document Object Model">
+    <h3>
+      Semántica
+    </h3>
+    <p>La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y
+    no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más
+    relevantes que otras, esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido,
+    categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También ayudará a
+    la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.</p>
+    <h3>
+      Atributos
+    </h3>
+    <p>Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el
+    navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos
+    funcionan en solo alguna etiquetas como src</p>
+    <h3>
+      CSS
+    </h3>
+    <p>Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir
+    la presentación de documentos HTML</p>
+    <img src="images/CSS.png" alt="Cascading Style Sheets" title="Cascading Style Sheets">
+    <h2>
+      Modelo de caja
+    </h2>
+    <h3>El modelo de caja está compuesto por:</h3>
+    <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
+    desarrollo avanzadas y de amigable uso.</p>
+    <ol>
+      <li>Tamaño del del contenido / ancho y alto</li>
+      <li>Padding / Relleno</li>
+      <li>Border / Bordes</li>
+      <li>Margin / Márgenes</li>
+      </ol>
+      <h3>Propiedades físicas para el modelo de caja:</h3>
+      <ul>
+        <li>width / height</li>
+        <li>margin / margin-top | margin-right | margin-bottom | margin-left</li>
+        <li>border / border-top | border-right | border-bottom | border-left</li>
+        <li>padding / padding-top | padding-right | padding-bottom | padding-left</li>
+      </ul>
+      <h3>Propiedades lógicas para el modelo de caja:</h3>
+      <ul>
+        <li>inline-size / block-size</li>
+        <li>margin-block | margin-inline | margin-block-start | margin-block-end | margin-inline-start | margin-inline-end</li>
+        <li>border-block | border-inline | border-block-start | border-block-end | border-inline-start | border-inline-end</li>
+        <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start | padding-inline-end</li>
+      </ul>
+  </body>
 </html>
