Aprendi a hacer un degradado y agregar una imagen

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="preconect" href="http://fonts.gstatic.com">
+  <link rel="stylesheet" href="link rel="preconnect href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <title>El blog de Otravalentina</title>
 </head>
 <body>
+  <div class="hero"></div>
   <header>
     <nav>
       <details open>
